<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/idPrimerMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/idRegistroCelular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textAlignment="center"
        android:textSize="32sp"
        android:hint="@string/login_celular"
        android:inputType="number"
        android:maxLength="10"/>

    <EditText
        android:id="@+id/idRegistroPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textAlignment="center"
        android:textSize="32sp"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:maxLength="45"/>

    <EditText
        android:id="@+id/idRegistroPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textAlignment="center"
        android:textSize="32sp"
        android:hint="@string/login_password2"
        android:inputType="textPassword"
        android:maxLength="45"/>

    <Button
        android:id="@+id/idRegistroSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textAlignment="center"
        android:textSize="32sp"
        android:text="@string/registro_boton_siguiente"
        android:onClick="siguienteMenuRegistro"/>

</LinearLayout>

